# mini-crm-async-summarization

./: .dockerignore  .env.example  .gitignore  Backend_Candidate_Assignment_Handout.md  Dockerfile  Procfile  README.md  docker-compose.yml  pyproject.toml  supervisord.conf
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: main.py  worker.py
app/core/: config.py  database.py  deps.py  exceptions.py  migrations.py  security.py
app/models/: __init__.py  note.py  user.py
app/routers/: auth.py  notes.py
app/schemas/: auth.py  note.py
app/services/: summarizer.py
tests/: test_integration.py  test_smoke.py  test_validation.py
